data/derived/comb/progs/unify/prog0674.ml.out
Characters 24-29:
  List.map string_of_int [[1;0];[2];[3]];;
                          ^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
